--- a/Portfolio-Website/main.html
+++ b/Portfolio-Website/main.html
@@ -34,7 +34,7 @@
                 <h4>Hi I am</h4>
                 <h2>Harshit Sharma</h2>
                 <h1>Front-end Web Developer</h1>
-                <a target="_blank" href="https://www.instagram.com/the.harshit_0028/"><img src="/images/instagram.svg"
+                <a target="_blank" href="https://www.instagram.com/harshit_sharma280/"><img src="images/instagram.svg"
                         alt="instagram.com"></a>
                 <a target="_blank" href="https://www.linkedin.com/in/harshitsharma77"><img src="images/linkedin.svg"
                         alt="LinkedIn.com"></a>
@@ -48,40 +48,40 @@
 
     <section id="uno">
         <h1>Services</h1>
-        <h2>I am proficient in multiple programming languages like HTML5, CSS3, Python, C, C++, Oracle SQl, MySQL,
+        <h2>I am proficient in multiple programming languages like HTML5, CSS3, Python, C, C++, Java, Oracle SQL, MySQL,
             NumPY,Pandas,Matplotlib</h2>
     </section>
     <box>
         <div>
-            <img src="images/user.svg" alt="user" class="center">
-            <h1>App Services</h1>
+            <img src="images/web-development-svgrepo-com.svg" alt="user" class="center">
+            <h1>Web Site Creation</h1>
+            <p>Creating Interactive web design for any type of website</p>
+        </div>
+        <div>
+            <img src="images/database-svgrepo-com.svg" alt="user" class="center">
+            <h1>Database Creation</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
         </div>
         <div>
-            <img src="images/user.svg" alt="user" class="center">
-            <h1>App Services</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
-        </div>
-        <div>
-            <img src="images/user.svg" alt="user" class="center">
-            <h1>App Services</h1>
+            <img src="images/standard-objects-svgrepo-com.svg" alt="user" class="center">
+            <h1>Data Structures</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
         </div>
     </box>
     <box2>
         <div>
-            <img src="images/user.svg" alt="user" class="center">
-            <h1>App Services</h1>
+            <img src="images/ai-svgrepo-com.svg" alt="user" class="center">
+            <h1>Generative AI</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
         </div>
         <div>
-            <img src="images/user.svg" alt="user" class="center">
-            <h1>App Services</h1>
+            <img src="images/machine-learning-03-svgrepo-com.svg" alt="user" class="center">
+            <h1>Machine Learning</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
         </div>
         <div>
-            <img src="images/user.svg" alt="user" class="center">
-            <h1>App Services</h1>
+            <img src="images/internet-media-os-svgrepo-com.svg" alt="user" class="center">
+            <h1>Operating System</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
         </div>
     </box2>
@@ -120,24 +120,24 @@
             </div>
             <div class="skills">
                 <div class="skill">
-                    <img src="images/figma.svg" alt="Figma Icon">
-                    <p>70%<br>Figma</p>
+                    <img src="images/java-svgrepo-com.svg" alt="Figma Icon">
+                    <p>70%<br>Java</p>
                 </div>
                 <div class="skill">
                     <img src="images/html.svg" alt="HTML Icon">
-                    <p>100%<br>HTML5</p>
+                    <p>100%<br>Web Development</p>
                 </div>
                 <div class="skill">
-                    <img src="images/css.svg" alt="CSS3 Icon">
-                    <p>100%<br>CSS3</p>
+                    <img src="images/c.svg" alt="CSS3 Icon">
+                    <p>100%<br>C++</p>
                 </div>
                 <div class="skill">
-                    <img src="images/python.svg" alt="Python Icon">
-                    <p>90%<br>Python</p>
+                    <img src="images/cog-svgrepo-com.svg" alt="Python Icon">
+                    <p>90%<br>ML</p>
                 </div>
                 <div class="skill">
-                    <img src="images/sql.svg" alt="SQL Icon">
-                    <p>80%<br>SQL</p>
+                    <img src="images/database-svgrepo-com copy.svg" alt="SQL Icon">
+                    <p>80%<br>DBMS</p>
                 </div>
             </div>
         </div>
