--- a/Portfolio-Website/main.html
+++ b/Portfolio-Website/main.html
@@ -157,9 +157,10 @@
                         <label for="service"></label>
                         <select id="service" name="service">
                             <option value="" disabled selected>Service Of Interest</option>
-                            <option value="Figma-Design">Figma Design</option>
-                            <option value="Front-end-Web-Development">Front-end Web Development</option>
-                            <option value="DSA-using-C">DSA using C</option>
+                            <option value="Figma-Design">Figma Design/ Web Development</option>
+                            <option value="Front-end-Web-Development">Database Management</option>
+                            <option value="Front-end-Web-Development">Artificial Intelligence</option>
+                            <option value="DSA-using-C">DSA using C++ or Java</option>
 
                         </select>
                     </div>
