Updates incoming with project page starting

--- a/Portfolio-Website/main.html
+++ b/Portfolio-Website/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="description" content="Harshit Sharma Portfolio Website">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
             <li id="one"><a href="main.html">Home</a></li>
             <li><a href="#uno">Services</a></li>
             <li><a href="#container">About me</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="#contact-container">Contact me</a></li>
         </ul>
 
@@ -33,7 +34,7 @@
             <mo>
                 <h4>Hi I am</h4>
                 <h2>Harshit Sharma</h2>
-                <h1>Front-end Web Developer</h1>
+                <h1>Machine Learning &nbsp;Developer</h1>
                 <a target="_blank" href="https://www.instagram.com/harshit_sharma280/"><img src="images/instagram.svg"
                         alt="instagram.com"></a>
                 <a target="_blank" href="https://www.linkedin.com/in/harshitsharma77"><img src="images/linkedin.svg"
