--- a/Portfolio-Website/main.html
+++ b/Portfolio-Website/main.html
@@ -114,7 +114,7 @@
                             noble pursuit, unraveling the mysteries hidden within the tangled webs of code. designs. In
                             this
                             digital atelier.</p>
-                        <a href="/Users/apple/Downloads/DOC.docx" download="DOC.docx" class="download-cv">Download
+                        <a href="Downloads/DOC.docx" download="DOC.docx" class="download-cv">Download
                             CV</a>
                     </div>
                 </div>
