--- a/Portfolio-Website/projects.html
+++ b/Portfolio-Website/projects.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            height: 100vh;
+            width: 100vw;
+            background-color: rgb(32, 23, 23);
+            color: aliceblue;
+        }
+    </style>
 </head>
+
 <body>
     <h1>Projects</h1>
     <p>Here are some of my projects</p>
 </body>
+
 </html>
