Making it responsive, using vw and vh instead of px

--- a/Portfolio-Website/main.html
+++ b/Portfolio-Website/main.html
@@ -186,9 +186,9 @@
         </ul>
         <div class="bot">
 
-            <a href=""><img src="images/instagram.svg" alt="instagram Icon"></a>
-            <a href="#"><img src="images/linkedin.svg" alt="instagram Icon"></a>
-            <a href="#"><img src="images/github.svg" alt="instagram Icon"></a>
+            <a href="https://www.instagram.com/harshit_sharma280/"><img src="images/instagram.svg" alt="Instagram Icon"></a>
+            <a href="https://www.linkedin.com/in/harshitsharma77"><img src="images/linkedin.svg" alt="LinkedIn Icon"></a>
+            <a href="https://github.com/Harshit-077"><img src="images/github.svg" alt="Github Icon"></a>
         </div>
         <div class="maut">
             <p><img src="images/email-icon.svg" alt=""> harshitsharma.0777@gmail.com </p>
