Making the navigation stick

--- a/Portfolio-Website/main.html
+++ b/Portfolio-Website/main.html
@@ -53,34 +53,34 @@
             NumPY,Pandas,Matplotlib</h2>
     </section>
     <box>
-        <div>
+        <div id="on">
             <img src="images/web-development-svgrepo-com.svg" alt="user" class="center">
             <h1>Web Site Creation</h1>
             <p>Creating Interactive web design for any type of website</p>
         </div>
-        <div>
+        <div id="tw">
             <img src="images/database-svgrepo-com.svg" alt="user" class="center">
             <h1>Database Creation</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
         </div>
-        <div>
+        <div id="th">
             <img src="images/standard-objects-svgrepo-com.svg" alt="user" class="center">
             <h1>Data Structures</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
         </div>
     </box>
     <box2>
-        <div>
+        <div id="fo">
             <img src="images/ai-svgrepo-com.svg" alt="user" class="center">
             <h1>Generative AI</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
         </div>
-        <div>
+        <div id="fi">
             <img src="images/machine-learning-03-svgrepo-com.svg" alt="user" class="center">
             <h1>Machine Learning</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
         </div>
-        <div>
+        <div id="si">
             <img src="images/internet-media-os-svgrepo-com.svg" alt="user" class="center">
             <h1>Operating System</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam alias aspernatur praesentium.</p>
