update security in a tag

--- a/Portfolio-Website/main.html
+++ b/Portfolio-Website/main.html
@@ -23,7 +23,7 @@
         </ul>
 
         <ul class="last_nav">
-            <li><a target="_blank" href="https://www.linkedin.com/in/harshitsharma77">Hire me</a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/harshitsharma77" rel = "noopener">Hire me</a></li>
         </ul>
 
 
@@ -35,11 +35,11 @@
                 <h4>Hi I am</h4>
                 <h2>Harshit Sharma</h2>
                 <h1>Machine Learning &nbsp;Developer</h1>
-                <a target="_blank" href="https://www.instagram.com/harshit_sharma280/"><img src="images/instagram.svg"
+                <a target="_blank" href="https://www.instagram.com/harshit_sharma280/" rel = "noopener"><img src="images/instagram.svg"
                         alt="instagram.com"></a>
-                <a target="_blank" href="https://www.linkedin.com/in/harshitsharma77"><img src="images/linkedin.svg"
+                <a target="_blank" href="https://www.linkedin.com/in/harshitsharma77" rel = "noopener"><img src="images/linkedin.svg"
                         alt="LinkedIn.com"></a>
-                <a target="_blank" href="https://github.com/Harshit-077"><img src="images/github.svg" alt="Github.com"></a>
+                <a target="_blank" href="https://github.com/Harshit-077" rel = "noopener"><img src="images/github.svg" alt="Github.com"></a>
             </mo>
             <circle>
                 <img src="images/comp.svg" alt="circle Icon">
