On way to make a responsive design

--- a/Portfolio-Website/main.html
+++ b/Portfolio-Website/main.html
@@ -158,11 +158,10 @@
                         <label for="service"></label>
                         <select id="service" name="service">
                             <option value="" disabled selected>Service Of Interest</option>
-                            <option value="Figma-Design">Figma Design/ Web Development</option>
-                            <option value="Front-end-Web-Development">Database Management</option>
-                            <option value="Front-end-Web-Development">Artificial Intelligence</option>
-                            <option value="DSA-using-C">DSA using C++ or Java</option>
-
+                            <option value="Figma_Design">Figma Design/ Web Development</option>
+                            <option value="Database_Management">Database Management</option>
+                            <option value="Artificial_Intelligence">Artificial Intelligence</option>
+                            <option value="DSA">DSA using C++ or Java</option>
                         </select>
                     </div>
                     <div class="form-row">
